# Iven

./: .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
config/: __init__.py  bot.json
modules/ai_drawing/: __init__.py
modules/dailyfursuit/: __init__.py
modules/recognize/: __init__.py
modules/transfur/: __init__.py
modules/welcome/: __init__.py
utils/ai_drawing/: __init__.py
utils/detr_resnet/: __init__.py
utils/transfur/: __init__.py
